Fixing Carousel and Landing Spacing

--- a/2014/css/general.css
+++ b/2014/css/general.css
@@ -52,15 +52,34 @@ header {	/*This fixes the nav at the top, and determines the nav color*/
   margin: 0;
   padding:0;
 
-  height: 10rem;
+  height: 13.5rem;
 }
 
 @media only screen and (min-width: 30em){
 
 	.landing {
-		height: 40em;
+		height: 15em;
+		background-color: transparent;
 	}
 }
+
+@media only screen and (min-width: 50em){
+
+	.landing {
+		height: 20em;
+		background-color: transparent;
+	}
+}
+
+@media only screen and (min-width: 60em){
+
+	.landing {
+		height: 40em;
+		background-color: transparent;
+	}
+}
+
+
 
 /*CAROUSEL OVER LAY*/
 
